/*
 * Copyright 2018- The Pixie Authors.
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 *
 * SPDX-License-Identifier: Apache-2.0
 */

syntax = "proto3";

package px.common;

option go_package = "ping";

import "github.com/gogo/protobuf/gogoproto/gogo.proto";

message PingRequest {
  string req = 1;
}

message PingReply {
  string reply = 1;
}

service PingService {
  // Sends a greeting
  rpc Ping(PingRequest) returns (PingReply);
  rpc PingClientStream(stream PingRequest) returns (PingReply);
  rpc PingServerStream(PingRequest) returns (stream PingReply);
}
